src/objects/zkmulti__MCPackage__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__ActualDeliveryDate__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdditionalHandling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdditionalTrackingNumbers__c</fullName>
        <label>Additional Tracking Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdmissibilityPackageTypeName__c</fullName>
        <label>Admissibility Package Type Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdmissibilityPackageType__c</fullName>
        <label>Admissibility Package Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AllPackedHaZmatInOnePackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if multiple, different hazmat/chemicals are contained within one box in a package</description>
        <inlineHelpText>if multiple, different hazmat/chemicals are contained within one box in a package</inlineHelpText>
        <label>All Packed HazMat In One Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Allow_Record_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierType__c</fullName>
        <label>Carrier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Damaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Damaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeclaredValueCurrency__c</fullName>
        <label>Declared/Carriage Value Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeclaredValue__c</fullName>
        <label>Declared/Carriage Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeletedFromShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided from Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeliverWithoutSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver Without Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dimension_Units__c</fullName>
        <label>Dimension Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DryIceMedicalUseIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry Ice Medical Use Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DryIceRegulationSet__c</fullName>
        <label>Dry Ice Regulation Set</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DryIce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry Ice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmergencyContact__c</fullName>
        <label>Emergency Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmergencyPhone__c</fullName>
        <label>Emergency Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Empty_Box_Weight__c</fullName>
        <label>Empty Box Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExtraCost__c</fullName>
        <label>Extra Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Freight_Class__c</fullName>
        <label>Freight Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Handling_Unit_Count__c</fullName>
        <label>Handling Unit Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Handling_Unit_Type__c</fullName>
        <label>Handling Unit Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazMatDetailsFirst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haz Mat Details First</label>
        <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
        <relationshipLabel>Packages (Haz Mat Details First)</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazMatDetailsSecond__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haz Mat Details Second</label>
        <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
        <relationshipLabel>Packages (Haz Mat Details Second)</relationshipLabel>
        <relationshipName>Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazMatDetailsThird__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haz Mat Details Third</label>
        <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
        <relationshipLabel>Packages (Haz Mat Details Third)</relationshipLabel>
        <relationshipName>Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazMatFirstQuantity__c</fullName>
        <label>Haz Mat First Quantity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazMatSecondQuantity__c</fullName>
        <label>Haz Mat Second Quantity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__HazMatThirdQuantity__c</fullName>
        <label>Haz Mat Third Quantity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Height__c</fullName>
        <label>Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Inner_Height__c</fullName>
        <label>Inner Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Inner_Length__c</fullName>
        <label>Inner Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Inner_Width__c</fullName>
        <label>Inner Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__IonInEquip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ion in Equip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IonWithEquip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ion w/ Equip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IsFreight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Length__c</fullName>
        <label>Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Max_Weight__c</fullName>
        <label>Max Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__MetalInEquip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metal in Equip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__MetalWithEquip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metal w/ Equip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NMFC_Number__c</fullName>
        <label>NMFC Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NMFC_Sub_Category__c</fullName>
        <label>NMFC Sub Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Order_Item_Id__c</fullName>
        <label>Order Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OriginalObjectId__c</fullName>
        <label>Original Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OverPackedHazMat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>One or more hazmat/chemicals are in separate boxes in a package</description>
        <inlineHelpText>One or more hazmat/chemicals are in separate boxes in a package</inlineHelpText>
        <label>Over Packed HazMat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageHandlingAmount__c</fullName>
        <label>Package Handling Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageProfileDescription__c</fullName>
        <label>Package Profile Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Packaging_Type_Name__c</fullName>
        <label>Packaging Type Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile</label>
        <referenceTo>zkmulti__MCPackage__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__QValue__c</fullName>
        <label>Q Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference1_Value__c</fullName>
        <label>Reference 1 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference2_Value__c</fullName>
        <label>Reference 2 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference3_Value__c</fullName>
        <label>Reference 3 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SSCodType__c</fullName>
        <label>COD Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Specific_Product_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specific Product Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsCodAmountCurrency__c</fullName>
        <label>COD Collection Amount Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsCodAmount__c</fullName>
        <label>COD Collection Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsCodCashiersCheckOrMoneyOrderOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD Cashier&apos;s Check or Money Order Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsCod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsDangerousGoodsAccessibility__c</fullName>
        <label>Dangerous Goods Accessibility</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsDryIceWeight__c</fullName>
        <label>Dry Ice Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsElectronicCod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E.C.O.D.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsHazMatDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HazMat Details</label>
        <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Multi_Carrier_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsNonStandardPackaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard Packaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsOrmDDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ORM-D Details</label>
        <referenceTo>zkmulti__DangerousGoodsDetails__c</referenceTo>
        <relationshipName>Multi_Carrier_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsPriorityAlertContent__c</fullName>
        <label>Priority Alert - Content</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsPriorityAlertPlus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Alert Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsPriorityAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SsSignatureOption__c</fullName>
        <label>Signature Options</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__StatusDescription__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalPiecesOnSkid__c</fullName>
        <label>Total Pieces On Skid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__TrackingIdType__c</fullName>
        <label>Tracking Number Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TrackingId__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TransportationMode__c</fullName>
        <label>Transportation Mode</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__VerbalConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verbal Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Width__c</fullName>
        <label>Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <columns>NAME</columns>
        <columns>zkmulti__Carrier__c</columns>
        <columns>zkmulti__Packaging_Type__c</columns>
        <columns>zkmulti__Packaging_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zkmulti__Package_Data</fullName>
        <columns>NAME</columns>
        <columns>zkmulti__Carrier__c</columns>
        <columns>zkmulti__PackageProfileDescription__c</columns>
        <columns>zkmulti__Packaging_Type__c</columns>
        <columns>zkmulti__AdmissibilityPackageTypeName__c</columns>
        <columns>zkmulti__AdmissibilityPackageType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkmulti__PackageProfile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Package Data</label>
    </listViews>
    <nameField>
        <displayFormat>Package-{0000000000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>